--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ $(function(){
 </script>
 
 <section>
-  <p class="en">I'm a designer. My pratice can be found across the area of generative design, branding and conventional graphic design.</p>
-  <p class="zh">我是一名设计师。我实践的领域包括衍生式设计、品牌设计和传统的平面设计。</p>
+  <p class="en">I'm a designer who works across the area of generative design, branding and conventional graphic design.</p>
+  <p class="zh">我是一名实践于衍生式设计、品牌设计和传统的平面设计等领域的设计师。</p>
 </section>
 
 <h1 class="en">Nora Zhao</h1>
@@ -27,13 +27,10 @@ $(function(){
 <img src="img/glitch-room-2.png" alt="">
 
 <section>
-  <!-- <h2 class="en">About Me</h2>
-  <h2 class="zh">个人简介</h2> -->
-
   <p class="en text">
     My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the area of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
     <br>
-    I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Visual Communication Design (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
+    I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
     <br>
   </p>
 
