--- a/navigation.html
+++ b/navigation.html
@@ -45,6 +45,72 @@
 <div id="sideNav">
   <nav>
     <img id="closeBtn" onclick="closeNav()" src="img/icon/close.svg" alt="Close">
+
+    <!-- language selector ---------------------------------------- -->
+    <div class="radioToolbar">
+      <input type="radio" id="enBtn" name="language" value="en" checked>
+      <label for="enBtn">
+        <p style="font-family: 'canela-thin', serif; font-size: 2vmax;">English</p>
+      </label>
+      <p style="font-family: 'canela-thin', serif; font-size: 2vmax; display: inline-block;">·</p>
+      <input type="radio" id="zhBtn" name="language" value="zh">
+      <label for="zhBtn">
+        <p style="font-family: 'STSong', '华文宋体', 'NSimSun', '新宋体', 'SimSun', '宋体', serif;
+                  font-size: 1.6vmax;
+                  position: relative;
+                  bottom: 0.21vmax;">中文</p>
+      </label>
+    </div>
+    <style media="screen">
+      /* (style ref https://jsfiddle.net/markheath/azk2cL45) */
+      .radioToolbar {
+        display: inline-block;
+        margin-left: 1vmax;
+      }
+      .radioToolbar input[type="radio"] { /* hide default radio buttons */
+        opacity: 0;
+        position: fixed;
+        width: 0;
+        }
+      .radioToolbar label { /* each botton */
+        display: inline-block;
+        margin-right: 0.2vmax;
+      }
+
+      .radioToolbar label:hover {
+        cursor: pointer;
+      }
+      .radioToolbar input[type="radio"]:checked + label { /* https://css-tricks.com/change-color-of-svg-on-hover/ */
+        filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
+      }
+    </style>
+    <script type="text/javascript">
+      // record & retrive the selection status (ref https://stackoverflow.com/a/53298040/11975753)
+      $(function() {
+        $("[name='language']").click(function(){
+          var value = $(this).val();
+          localStorage.setItem("option", value);
+        });
+        var itemValue = localStorage.getItem("option");
+        if (itemValue !== null) {
+          $("input[value=\""+itemValue+"\"]").click();
+        }
+      });
+
+      // change the display of page contents based on selected language
+      $("[name='language']").click(function() {
+        if (document.getElementById('enBtn').checked) {
+          $(".en").css("display", "block");
+          $(".zh").css("display", "none");
+        }
+        else if (document.getElementById('zhBtn').checked) {
+          $(".zh").css("display", "block");
+          $(".en").css("display", "none");
+        }
+      });
+    </script>
+
+    <!-- sidebar menu contents ---------------------------------------- -->
     <p>
       <a class="en" href="index.html">Home Page</a>
       <a class="zh" href="index.html">主页</a>
@@ -97,67 +163,12 @@
   nav {
     margin: 2vmax 1.5vmax;
   }
-</style>
-
-<!-- language selector ---------------------------------------- -->
-<div class="radioToolbar">
-  <input type="radio" id="enBtn" name="language" value="en" checked>
-  <label for="enBtn" id="enSvg"><img src="img/icon/en.svg" alt=""></label>
-
-  <input type="radio" id="zhBtn" name="language" value="zh">
-  <label for="zhBtn" id="zhSvg"><img src="img/icon/zh.svg" alt=""></label>
-</div>
-<style media="screen">
-  /* (style ref link https://jsfiddle.net/markheath/azk2cL45) */
-  .radioToolbar {
-    position: fixed;
-    top: 4.4vmax;
-    left: 1.4vmax;
-  }
-  .radioToolbar input[type="radio"] { /* hide default radio buttons */
-    opacity: 0;
-    position: fixed;
-    width: 0;
-    }
-  .radioToolbar label { /* each botton */
-    display: inline-block;
-    margin-right: 0.2vmax;
-  }
-  #enSvg {
-    width: 2vmax;
-  }
-  #zhSvg {
-    width: 3vmax;
-  }
-  .radioToolbar label:hover {
-    cursor: pointer;
-  }
-  .radioToolbar input[type="radio"]:checked + label { /* https://css-tricks.com/change-color-of-svg-on-hover/ */
-    filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
+  #sideNav a.active{
+    text-decoration:line-through blueviolet;
   }
 </style>
 <script type="text/javascript">
-  // record & retrive the selection status (ref link https://stackoverflow.com/a/53298040/11975753)
-  $(function() {
-    $("[name='language']").click(function(){
-      var value = $(this).val();
-      localStorage.setItem("option", value);
-    });
-    var itemValue = localStorage.getItem("option");
-    if (itemValue !== null) {
-      $("input[value=\""+itemValue+"\"]").click();
-    }
-  });
-
-  // change the display of page contents based on selected language
-  $("[name='language']").click(function() {
-    if (document.getElementById('enBtn').checked) {
-      $(".en").css("display", "block");
-      $(".zh").css("display", "none");
-    }
-    else if (document.getElementById('zhBtn').checked) {
-      $(".zh").css("display", "block");
-      $(".en").css("display", "none");
-    }
-  });
+  $("#sideNav a").filter(function(){ // add active class to current link (ref https://stackoverflow.com/a/13349151/11975753)
+      return this.href == location.href.replace(/#.*/, "");
+  }).addClass("active");
 </script>
