--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ $(function(){
 });
 </script>
 
-<section>
+<section class="pageTop">
   <p class="en">
     This link is invalid. Please click <a href="index.html">here</a> to visit the home page.
   </p>
