--- a/glitch-room.html
+++ b/glitch-room.html
@@ -16,7 +16,7 @@ $(function(){
 });
 </script>
 
-<section>
+<section class="pageTop">
   <p class="en">An interactive VR site which generates customised glitching patterns.<p>
   <p class="zh">可生成自定义故障图样的交互式虚拟现实网站。</p>
 </section>
@@ -49,6 +49,13 @@ $(function(){
 
 <img src="img/glitch-room/5-2s.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
 <img src="img/glitch-room/8-1sp.jpg" alt="Glitch Room - A Graphic Design Project by Nora Zhao">
+
+<section>
+  <h6 class="en">Screenshots of 3D models in VR view on glitchroom.com.</h6>
+  <h6 class="zh">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</h6>
+</section>
+
+
 
 <div class="" style="margin-top: 40vh;"></div>
 
