--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ $(function(){
 });
 </script>
 
-<section>
+<section class="pageTop">
   <p class="en">I'm a designer who works across the area of generative design, branding and conventional graphic design.</p>
   <p class="zh">我是一名实践于衍生式设计、品牌设计和传统的平面设计等领域的设计师。</p>
 </section>
