--- a/navigation.html
+++ b/navigation.html
@@ -139,22 +139,26 @@
       <a class="zh" href="index.html">主页</a>
     </p>
 
-    <p class="en">Coding Projects</p>
-    <p class="zh">编程设计项目</p>
+    <p class="en">Coding Projects:</p>
+    <p class="zh">编程设计项目：</p>
     <p>
-      <img class="projectIcon" src="img/icon/glitch.ico" alt="-">
-      <a class="en" href="glitch-room.html">Glitch Room</a>
-      <a class="zh" href="glitch-room.html">故障房间</a>
+      <!-- <img class="projectIcon" src="img/icon/glitch.ico" alt="-"> -->
+      <a class="en" href="glitch-room.html">- Glitch Room</a>
+      <a class="zh" href="glitch-room.html">- 故障房间</a>
     </p>
 
-    <p class="en">Branding Projects</p>
-    <p class="zh">品牌设计项目</p>
+    <p class="en">Branding Projects:</p>
+    <p class="zh">品牌设计项目：</p>
 
-    <p class="en">Design Projects</p>
-    <p class="zh">平面设计项目</p>
+    <p class="en">Design Projects:</p>
+    <p class="zh">平面设计项目：</p>
+    <p>
+      <a class="en" href="chinese-grid.html">- Chinese Grid</a>
+      <a class="zh" href="chinese-grid.html">- 中文文字网格</a>
+    </p>
 
-    <p class="en">Other</p>
-    <p class="zh">其他</p>
+    <p class="en">Other:</p>
+    <p class="zh">其他：</p>
 
     <p>
       <a class="en" href="#">About and Contact</a>
