--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>NORA ZHAO 赵子娴 · GRAPHIC DESIGNER 平面设计师</title>
+<title>Nora Zhao 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -16,6 +16,7 @@ $(function(){
 });
 </script>
 
+<main>
 <section class="pageTop">
   <p class="en">I'm a designer who works across the area of generative design, branding and conventional graphic design.</p>
   <p class="zh">我是一名实践于衍生式设计、品牌设计和传统的平面设计等领域的设计师。</p>
@@ -40,6 +41,6 @@ $(function(){
     我持有中国传媒大学的工商管理本科学位（<span lang="en">2016</span>）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，<span lang="en">2018</span>）和平面媒体设计硕士学位（优秀，<span lang="en">2020</span>）。
   </p>
 </section>
-
+</main>
 </body>
 </html>
