--- a/navigation.html
+++ b/navigation.html
@@ -161,8 +161,8 @@
     <p class="zh">其他：</p>
 
     <p>
-      <a class="en" href="#">About and Contact</a>
-      <a class="zh" href="#">简介及联系方式</a>
+      <a class="en" href="about-and-contact.html">About and Contact</a>
+      <a class="zh" href="about-and-contact.html">简介及联系方式</a>
     </p>
 
     <p class="en">0 <br> 1 <br> 2 <br> 3 <br> 4 <br> 5 <br> 6 <br> 7 <br> 8 <br> 9 <br> 0 <br> 1 <br> 2 <br> 3 <br> 4 <br> 5 <br> 6 <br> 7 <br> 8 <br> 9 <br></p>
