--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -64,6 +64,11 @@ $(function(){
   </p>
 </section>
 
-<div class="pageDivider"></div>
+<div id="footer"></div>
+<script type="text/javascript">
+$(function(){
+  $("#footer").load("footer.html");
+});
+</script>
 </body>
 </html>
