--- a/glitch-room.html
+++ b/glitch-room.html
@@ -44,12 +44,11 @@ $(function(){
 
 <img src="img/glitch-room/2-1sc.jpg" alt="Glitch Room by Nora Zhao">
 <img src="img/glitch-room/6-2s.jpg" alt="Glitch Room by Nora Zhao">
-
 <img src="img/glitch-room/5-2s.jpg" alt="Glitch Room by Nora Zhao">
 <img src="img/glitch-room/8-1sp.jpg" alt="Glitch Room by Nora Zhao">
 
-<h6 class="en">Screenshots of 3D models in VR view on glitchroom.com.</h6>
-<h6 class="zh">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</h6>
+<h6 class="en imgDescription">Screenshots of 3D models in VR view on glitchroom.com.</h6>
+<h6 class="zh imgDescription">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</h6>
 </main>
 
 <div class="pageDivider"></div>
@@ -60,7 +59,14 @@ $(function(){
 </a>
 <script type="text/javascript">
 $(function(){
-  $("#nextPage").load("chinese-grid.html main"); <!-- change link -->
+  $("#nextPage").load("chinese-grid.html main"); // change link
+});
+</script>
+
+<div id="footer"></div>
+<script type="text/javascript">
+$(function(){
+  $("#footer").load("footer.html");
 });
 </script>
 </body>
