--- a/index.html
+++ b/index.html
@@ -42,5 +42,12 @@ $(function(){
   </p>
 </section>
 </main>
+
+<div id="footer"></div>
+<script type="text/javascript">
+$(function(){
+  $("#footer").load("footer.html");
+});
+</script>
 </body>
 </html>
