--- a/navigation.html
+++ b/navigation.html
@@ -145,6 +145,9 @@
       <!-- <img class="projectIcon" src="img/icon/glitch.ico" alt="-"> -->
       <a class="en" href="glitch-room.html">- Glitch Room</a>
       <a class="zh" href="glitch-room.html">- 故障房间</a>
+
+      <a class="en" href="coordinate-converter.html">- Coordinate Converter</a>
+      <a class="zh" href="coordinate-converter.html">- 坐标转换器</a>
     </p>
 
     <p class="en">Branding Projects:</p>
