--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -18,7 +18,7 @@ $(function() {
 
 <main>
 <section class="pageTop">
-  <p class="en">I'm a freelance graphic designer. For work or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.<p>
+  <p class="en">I'm a freelance graphic designer. For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.<p>
   <p class="zh">我是一名自由职业平面设计师。如果您有项目或合作需求，可通过<span lang="en">norazhaodesign@gmail.com</span>联系我。</p>
 </section>
 
