--- a/byton.html
+++ b/byton.html
@@ -47,16 +47,14 @@ $(function() {
 
 <div class="pageDivider"></div>
 
-<!-- place link-->
-<a href=".html">
+<a href="chinese-grid.html">
   <p class="en nextText">Next Project</p>
   <p class="zh nextText">下一个项目</p>
   <div id="nextPage"></div>
 </a>
 <script type="text/javascript">
 $(function() {
-  // place link
-  $("#nextPage").load(".html main");
+  $("#nextPage").load("chinese-grid.html main");
 });
 </script>
 
