--- a/navigation.html
+++ b/navigation.html
@@ -152,6 +152,20 @@
 
     <p class="en">Branding Projects:</p>
     <p class="zh">品牌设计项目：</p>
+    <p>
+      <a class="en" href="rtw.html">- RTW</a>
+      <a class="zh" href="rtw.html">- <span lang="en">RTW</span></a>
+      <br>
+      <a class="en" href="omdia.html">- Omdia</a>
+      <a class="zh" href="omdia.html">- <span lang="en">Omdia</span></a>
+      <br>
+      <a class="en" href="peacebird.html">- Peacebird</a>
+      <a class="zh" href="peacebird.html">- 太平鸟服饰</a>
+      <br>
+      <a class="en" href="byton.html">- Byton</a>
+      <a class="zh" href="byton.html">- 拜腾汽车</a>
+    </p>
+
 
     <p class="en">Design Projects:</p>
     <p class="zh">平面设计项目：</p>
