--- a/peacebird.html
+++ b/peacebird.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- write title -->
-<title></title>
+<title>Peacebird 太平鸟服饰</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -19,27 +18,26 @@ $(function() {
 
 <main>
 <section class="pageTop">
-  <!-- write project summary-->
-  <p class="en"><p>
-  <p class="zh"></p>
+  <p class="en">A refreshed visual identity for one of the best selling Chinese fashion brands.<p>
+  <p class="zh">用以适应电子屏幕辨识性的更新版企业视觉识别系统。</p>
 </section>
 
-<!-- write project title -->
-<h1 class="en"></h1>
-<h1 class="zh"></h1>
+<h1 class="en">Peacebird</h1>
+<h1 class="zh">太平鸟服饰</h1>
 
 <!-- place img -->
-<img src="img/" alt="by Nora Zhao">
+<img src="img/" alt="Peacebird by Nora Zhao">
 
 <!-- write img description-->
 <h6 class="en imgDescription"></h6>
 <h6 class="zh imgDescription"></h6>
 
 <section>
-  <!-- write body text -->
   <p class="en text">
+    While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive better legibility on digital screens.
   </p>
   <p class="zh text">
+    在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
   </p>
 </section>
 
@@ -47,16 +45,14 @@ $(function() {
 
 <div class="pageDivider"></div>
 
-<!-- place link-->
-<a href=".html">
+<a href="byton.html">
   <p class="en nextText">Next Project</p>
   <p class="zh nextText">下一个项目</p>
   <div id="nextPage"></div>
 </a>
 <script type="text/javascript">
 $(function() {
-  // place link
-  $("#nextPage").load(".html main");
+  $("#nextPage").load("byton.html main");
 });
 </script>
 
