--- a/rtw.html
+++ b/rtw.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- write title -->
-<title></title>
+<title>RTW</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -20,13 +19,13 @@ $(function() {
 <main>
 <section class="pageTop">
   <!-- write project summary-->
-  <p class="en"><p>
+  <p class="en">Brand identity for an apparel company that provides classical quality products with a reasonable price.<p>
   <p class="zh"></p>
 </section>
 
 <!-- write project title -->
-<h1 class="en"></h1>
-<h1 class="zh"></h1>
+<h1 class="en">RTW</h1>
+<h1 class="zh"><span lang="en">RTW</span></h1>
 
 <!-- place img -->
 <img src="img/" alt="by Nora Zhao">
@@ -47,16 +46,14 @@ $(function() {
 
 <div class="pageDivider"></div>
 
-<!-- place link-->
-<a href=".html">
+<a href="omdia.html">
   <p class="en nextText">Next Project</p>
   <p class="zh nextText">下一个项目</p>
   <div id="nextPage"></div>
 </a>
 <script type="text/javascript">
 $(function() {
-  // place link
-  $("#nextPage").load(".html main");
+  $("#nextPage").load("omdia.html main");
 });
 </script>
 
