--- a/omdia.html
+++ b/omdia.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- write title -->
-<title></title>
+<title>Omdia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -19,17 +18,15 @@ $(function() {
 
 <main>
 <section class="pageTop">
-  <!-- write project summary-->
-  <p class="en"><p>
-  <p class="zh"></p>
+  <p class="en">Brand identity framework for a global technology research powerhouse.<p>
+  <p class="zh">为一个全球科技调研中心设计的品牌识别系统。</p>
 </section>
 
-<!-- write project title -->
-<h1 class="en"></h1>
-<h1 class="zh"></h1>
+<h1 class="en">Omdia</h1>
+<h1 class="zh"><span lang="en">Omdia</span></h1>
 
 <!-- place img -->
-<img src="img/" alt="by Nora Zhao">
+<img src="img/" alt="Omdia by Nora Zhao">
 
 <!-- write img description-->
 <h6 class="en imgDescription"></h6>
@@ -38,6 +35,7 @@ $(function() {
 <section>
   <!-- write body text -->
   <p class="en text">
+    Established in 2019 with the combination of the Informa Tech’s research brands (Ovum, Heavy Reading, and Tractica) and the acquired IHS Markit technology research portfolio, Omdia combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media, and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
   </p>
   <p class="zh text">
   </p>
@@ -47,16 +45,14 @@ $(function() {
 
 <div class="pageDivider"></div>
 
-<!-- place link-->
-<a href=".html">
+<a href="peacebird.html">
   <p class="en nextText">Next Project</p>
   <p class="zh nextText">下一个项目</p>
   <div id="nextPage"></div>
 </a>
 <script type="text/javascript">
 $(function() {
-  // place link
-  $("#nextPage").load(".html main");
+  $("#nextPage").load("peacebird.html main");
 });
 </script>
 
