many new contents

--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -44,23 +44,23 @@ $(function() {
     Email: norazhaodesign@gmail.com
     <br>
     Mobile: +86 132 6007 1686
-    <br>
+    <!-- <br>
     Wechat: leonorao
     <br>
     Instagram: norazhaodesign
     <br>
-    Linkedin: norazhaodesign
+    Linkedin: norazhaodesign -->
   </p>
   <p class="zh">
     电子邮箱<span lang="en">: norazhaodesign@gmail.com</span>
     <br>
     手机<span lang="en">: +86 132 6007 1686</span>
-    <br>
+    <!-- <br>
     微信<span lang="en">: leonorao</span>
     <br>
     <span lang="en">Ins: norazhaodesign</span>
     <br>
-    领英<span lang="en">: norazhaodesign</span>
+    领英<span lang="en">: norazhaodesign</span> -->
   </p>
 </section>
 
