--- a/glitch-room.html
+++ b/glitch-room.html
@@ -25,7 +25,7 @@ $(function() {
 <h1 class="en">Glitch Room</h1>
 <h1 class="zh">故障房间</h1>
 <!-- <iframe src="page/glitch-room.html" style="width: 100%; height: 60vh; border: 0;"></iframe> -->
-<img src="img/glitch-room/1-1sc.jpg" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/1b.png" alt="Glitch Room by Nora Zhao">
 
 <section>
   <p class="en text">
@@ -33,7 +33,7 @@ $(function() {
     <br>
     The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
     <br>
-    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
+    A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen gra phic output.
   </p>
   <p class="zh text">
     故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
@@ -42,10 +42,12 @@ $(function() {
   </p>
 </section>
 
-<img src="img/glitch-room/2-1sc.jpg" alt="Glitch Room by Nora Zhao">
-<img src="img/glitch-room/6-2s.jpg" alt="Glitch Room by Nora Zhao">
-<img src="img/glitch-room/5-2s.jpg" alt="Glitch Room by Nora Zhao">
-<img src="img/glitch-room/8-1sp.jpg" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/2b.png" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/3b.png" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/4b.png" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/5b.png" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/6b.png" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/7b.png" alt="Glitch Room by Nora Zhao">
 
 <h6 class="en imgDescription">Screenshots of 3D models in VR view on glitchroom.com.</h6>
 <h6 class="zh imgDescription">三维模型在<span lang="en"> glitchroom.com </span>虚拟现实空间中的截图。</h6>
