--- a/peacebird.html
+++ b/peacebird.html
@@ -26,7 +26,13 @@ $(function() {
 <h1 class="zh">太平鸟服饰</h1>
 
 <!-- place img -->
-<img src="img/" alt="Peacebird by Nora Zhao">
+<video autoplay loop
+       src="img/peacebird/1.mov"
+       poster="posterimage.jpg"
+       style="width: 100%;">
+</video>
+
+
 
 <!-- write img description-->
 <h6 class="en imgDescription"></h6>
