--- a/rtw.html
+++ b/rtw.html
@@ -28,7 +28,7 @@ $(function() {
 <h1 class="zh"><span lang="en">RTW</span></h1>
 
 <!-- place img -->
-<img src="img/" alt="by Nora Zhao">
+<img src="img/rtw/1s.jpg" alt="RTW by Nora Zhao">
 
 <!-- write img description-->
 <h6 class="en imgDescription"></h6>
