--- a/byton.html
+++ b/byton.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- write title -->
-<title></title>
+<title>Byton 拜腾汽车</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -19,17 +18,14 @@ $(function() {
 
 <main>
 <section class="pageTop">
-  <!-- write project summary-->
-  <p class="en"><p>
-  <p class="zh"></p>
+  <p class="en">Tweaks on the visual assets of a startup electric car company to inject vibrance.<p>
+  <p class="zh">新兴电动汽车品牌的视觉资产年轻化调整。</p>
 </section>
 
-<!-- write project title -->
-<h1 class="en"></h1>
-<h1 class="zh"></h1>
+<h1 class="en">Byton</h1>
+<h1 class="zh">拜腾汽车</h1>
 
-<!-- place img -->
-<img src="img/" alt="by Nora Zhao">
+<img src="img/byton/1b.jpg" alt="Byton by Nora Zhao">
 
 <!-- write img description-->
 <h6 class="en imgDescription"></h6>
