--- a/byton.html
+++ b/byton.html
@@ -25,7 +25,7 @@ $(function() {
 <h1 class="en">Byton</h1>
 <h1 class="zh">拜腾汽车</h1>
 
-<img src="img/byton/1b.jpg" alt="Byton by Nora Zhao">
+<img src="img/byton/3s.jpg" alt="Byton by Nora Zhao">
 
 <!-- write img description-->
 <h6 class="en imgDescription"></h6>
