--- a/coordinate-converter.html
+++ b/coordinate-converter.html
@@ -54,14 +54,14 @@ $(function() {
 </main>
 
 <div class="pageDivider"></div>
-<a href="chinese-grid.html"> <!-- change link -->
+<a href="rtw.html"> <!-- change link -->
   <p class="en nextText">Next Project</p>
   <p class="zh nextText">下一个项目</p>
   <div id="nextPage"></div>
 </a>
 <script type="text/javascript">
 $(function() {
-  $("#nextPage").load("chinese-grid.html main"); // change link
+  $("#nextPage").load("rtw.html main"); // change link
 });
 </script>
 
