--- a/navigation.html
+++ b/navigation.html
@@ -142,9 +142,14 @@
     <p class="en">Coding Projects:</p>
     <p class="zh">编程设计项目：</p>
     <p>
-      <!-- <img class="projectIcon" src="img/icon/glitch.ico" alt="-"> -->
       <a class="en" href="glitch-room.html">- Glitch Room</a>
       <a class="zh" href="glitch-room.html">- 故障房间</a>
+      <br>
+      <a class="en" href="weather-sphere.html">- Weather Sphere</a>
+      <a class="zh" href="weather-sphere.html">- 天气球</a>
+      <br>
+      <a class="en" href="glitch-pattern.html">- Glitch Pattern</a>
+      <a class="zh" href="glitch-pattern.html">- 故障图纹</a>
       <br>
       <a class="en" href="coordinate-converter.html">- Coordinate Converter</a>
       <a class="zh" href="coordinate-converter.html">- 坐标转换器</a>
@@ -181,9 +186,6 @@
       <a class="en" href="about-and-contact.html">About and Contact</a>
       <a class="zh" href="about-and-contact.html">简介及联系方式</a>
     </p>
-
-    <p class="en">0 <br> 1 <br> 2 <br> 3 <br> 4 <br> 5 <br> 6 <br> 7 <br> 8 <br> 9 <br> 0 <br> 1 <br> 2 <br> 3 <br> 4 <br> 5 <br> 6 <br> 7 <br> 8 <br> 9 <br></p>
-    <p class="zh">0 <br> 1 <br> 2 <br> 3 <br> 4 <br> 5 <br> 6 <br> 7 <br> 8 <br> 9 <br> 0 <br> 1 <br> 2 <br> 3 <br> 4 <br> 5 <br> 6 <br> 7 <br> 8 <br> 9 <br></p>
   </nav>
 </div>
 <style media="screen">
