--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       left: 1.5vmax;
       z-index: 1;
     }
+    html, body, iframe, .iframeWrapper {
+      margin-bottom: 0;
+    }
   </style>
 
 
