--- a/chinese-grid.html
+++ b/chinese-grid.html
@@ -24,7 +24,7 @@ $(function() {
 
 <h1 class="en">Chinese Grid</h1>
 <h1 class="zh">中文文字网格</h1>
-<div class="iframeWrapper">
+<div class="iframeWrapper iframe60">
   <iframe src="page/chinese-grid.html"></iframe>
 </div>
 <h6 class="en imgDescription">Click on the components to construt a figure of your choice and have two generated outcomes.</h6>
@@ -45,7 +45,6 @@ $(function() {
 <img src="img/chinese-grid/grid.png" alt="Chinese Grid by Nora Zhao">
 <h6 class="en imgDescription">Each point and line has its corresponding part in the system, which allows the simultaneous generation of a character in two styles.</h6>
 <h6 class="zh imgDescription"></h6>
-
 </main>
 
 <div class="pageDivider"></div>
