--- a/coordinate-converter.html
+++ b/coordinate-converter.html
@@ -37,15 +37,34 @@ $(function() {
   </p>
 </section>
 
-<div class="iframeWrapper">
+<div class="grid2 gridxto1">
+  <div style="position:relative; padding-top:100%; overflow:auto; border:2px solid black;">
+    <iframe src="page/p5-4.html" style="border:none; position:absolute; top:0; left:0; height:100%; width:100%;"> </iframe>
+  </div>
+  <div style="position:relative; padding-top:100%; overflow:auto; border:2px solid black;">
+    <iframe src="page/p5-5.html" style="border:none; position:absolute; top:0; left:0; height:100%; width:100%;"> </iframe>
+  </div>
+</div>
+
+
+<div class="grid4 gridxto1">
+  <img src="img/coordinate-converter/2-1.jpg" alt="Coordinate Converter by Nora Zhao">
+  <img src="img/coordinate-converter/2-2.jpg" alt="Coordinate Converter by Nora Zhao">
+  <img src="img/coordinate-converter/2-3.jpg" alt="Coordinate Converter by Nora Zhao">
+  <img src="img/coordinate-converter/2-4.jpg" alt="Coordinate Converter by Nora Zhao">
+</div>
+
+
+
+<div class="iframeWrapper iframe60">
   <iframe src="page/p5-1.html"></iframe>
 </div>
 
-<div class="iframeWrapper">
+<div class="iframeWrapper iframe60">
   <iframe src="page/p5-2.html"></iframe>
 </div>
 
-<div class="iframeWrapper">
+<div class="iframeWrapper iframe60">
   <iframe src="page/p5-3.html"></iframe>
 </div>
 
