--- a/weather-sphere.html
+++ b/weather-sphere.html
@@ -28,7 +28,7 @@ $(function() {
 <h1 class="zh">天气球</h1>
 
 <!-- place img -->
-<div class="iframeWrapper">
+<div class="iframeWrapper iframe60">
   <iframe src="page/weather-sphere.html"></iframe>
 </div>
 
