--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <section class="pageTop">
-  <p class="en">I'm a designer who works across the area of generative design, branding and conventional graphic design.</p>
+  <p class="en">I'm a designer working across the areas of generative design, branding and conventional graphic design.</p>
 </section>
 
 <h1 class="en">Coming Soon</h1>
