--- a/glitch-pattern.html
+++ b/glitch-pattern.html
@@ -48,6 +48,18 @@ $(function() {
 <img src="img/glitch-pattern/4-2.png" alt="Glitch Pattern by Nora Zhao">
 <img src="img/glitch-pattern/4-3.png" alt="Glitch Pattern by Nora Zhao">
 
+<div class="grid3">
+  <img src="img/glitch-pattern/5-1.jpg" alt="Glitch Pattern by Nora Zhao">
+  <img src="img/glitch-pattern/5-2.jpg" alt="Glitch Pattern by Nora Zhao">
+  <img src="img/glitch-pattern/5-3.jpg" alt="Glitch Pattern by Nora Zhao">
+</div>
+
+<div class="grid4 gridxto2">
+  <img class="pix" src="img/glitch-pattern/6-1.png" alt="Glitch Pattern by Nora Zhao">
+  <img class="pix" src="img/glitch-pattern/6-2.png" alt="Glitch Pattern by Nora Zhao">
+  <img class="pix" src="img/glitch-pattern/6-3.png" alt="Glitch Pattern by Nora Zhao">
+  <img class="pix" src="img/glitch-pattern/6-4.png" alt="Glitch Pattern by Nora Zhao">
+</div>
 
 </main>
 
